--- a/01-Android/app/src/main/AndroidManifest.xml
+++ b/01-Android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.ccgr12024b_cabm">
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ccgr12024b_cabm"
         tools:targetApi="31">
+        <activity
+            android:name=".FRecyclerView"
+            android:exported="false" />
+        <activity
+            android:name=".ECrudEntrenador"
+            android:exported="false" />
+        <activity
+            android:name=".CIntentExplicitoParametros"
+            android:exported="false" />
         <activity
             android:name=".BListView"
             android:exported="false" />
